Feat : Add search and update by pseudo
