# src/main/kotlin/com/example/application/request/PlayerRequestCreate.kt
@@ -3,7 +3,7 @@ package com.example.application.request
 import com.example.domain.entity.Player
 import org.bson.types.ObjectId
 
-data class PlayerRequest (
+data class PlayerRequestCreate (
     val pseudo: String
 ){
     fun toDomain(): Player {
